# fractal-egui-demo

./: .gitignore  Cargo.toml  README.md
src/: julia.rs  julia_shader.wgsl  main.rs  mandelbrot.rs  mandelbrot_shader.wgsl  util.rs  wgsl_struct.rs
