[package]
name = "fractal-egui-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "*" }
colorgrad = { version = "0.8.0", features = ["preset"] }
eframe = { version = "0.33.3", default-features = false, features = [
    "wgpu",
    "accesskit",
    "default_fonts",
    "wayland",
    "web_screen_reader",
    "x11",
] }
egui-wgpu = { version = "0.33.3"}
egui_plot = "0.34.0"
log = "0.4.29"
wasm-bindgen = { version = "0.2.108" }
wasm-bindgen-futures = "0.4.58"
web-sys = "0.3.85"
wgpu = { version = "27.0.1" }
winit = "0.30.12"
#palette = "0.7.2"
#const-gen = "1.6.8"
#lazy_static = "1.5.0"